<resources>
    <string name="app_name">轻Box</string>
    <string name="all">搜索工具</string>
    <string name="sync">收藏同步</string>
    <string name="theme">主题管理</string>
    <string name="nightMode">夜间模式</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="other">其它</string>
    <string name="login_state">未登录</string>
    <string name="daily">小舟从此逝，江海寄余生。</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">让轻Box为您的生活添加更多的乐趣以及更快的生活效率体验吧！</string>
    <string name="me_account">账户管理</string>
    <string name="security">安全</string>
    <string name="unLogin">退出登录</string>
    <string name="复制">复制</string>
    <string name="取消">取消</string>
    <string name="复制成功">复制成功</string>
    <string name="已成功将内容复制到剪切板">已成功将内容复制到剪切板已成功将内容复制到剪切板</string>
    <string name="事件概况">事件概况</string>
    <string name="切换日期">切换日期</string>

    <string name="日常工具">常用工具</string>
    <string name="查询工具">查询工具</string>
    <string name="图片工具">图片工具</string>
    <string name="设备工具">设备工具</string>
    <string name="计算工具">计算工具</string>
    <string name="文字工具">文字工具</string>
    <string name="其它工具">其它工具</string>

    <!--  常用工具  -->
    <string name="OCR文字识别">OCR文字识别</string>
    <string name="指南针">指南针</string>
    <string name="时间屏幕">时间屏幕</string>

    <!--  查询工具  -->
    <string name="快递查询">快递查询</string>
    <string name="IP查询">IP查询</string>
    <string name="号码归属地查询">号码归属地查询</string>

    <!--  计算工具  -->
    <string name="计算器">计算器</string>
    <string name="日期计算器">日期计算器</string>
    <string name="进制转换">进制转换</string>

    <!--  图片工具  -->
    <string name="二维码工具">二维码工具</string>
    <string name="图片水印">图片水印</string>
    <string name="九宫格切图">九宫格切图</string>

    <!--  设备工具  -->
    <string name="应用管理">应用管理</string>
    <string name="坏点检测">坏点检测</string>
    <string name="查看设备信息">查看设备信息</string>

    <!--  文字工具  -->
    <string name="摩斯电码">摩斯电码</string>
    <string name="数字转上下标">数字转上下标</string>
    <string name="RC4加解密">RC4加解密</string>

    <!--  其它工具  -->
    <string name="历史上的今天">历史上的今天</string>
    <string name="金属探测器">金属探测器</string>
    <string name="做决定">做决定/转盘</string>
    <string name="请输入IP地址">请输入IP地址，如180.101.49.11</string>
    <string name="查询">查询</string>
    <string name="IP查询地理位置">IP查询地理位置</string>
    <string name="请输入手机号">请输入手机号</string>
    <string name="手机号归属地查询">手机号归属地查询</string>
    <string name="计算日期差">计算日期差</string>
    <string name="选择起始日期">选择起始日期</string>
    <string name="选择结束日期">选择结束日期</string>
    <string name="请输入间隔天数">请输入间隔天数</string>
    <string name="十进制">十进制</string>
    <string name="二进制">二进制</string>
    <string name="八进制">八进制</string>
    <string name="十六进制">十六进制</string>
    <string name="请输入二维码内容">请输入二维码内容</string>
    <string name="无LOGO">无LOGO</string>
    <string name="有LOGO">有LOGO</string>
    <string name="前景颜色">前景颜色</string>
    <string name="背景颜色">背景颜色</string>
    <string name="二维码尺寸">二维码尺寸</string>
    <string name="LOGO图片">LOGO图片</string>
    <string name="请选择二维码的LOGO图片">请选择二维码的LOGO图片</string>
    <string name="选择">选择</string>
    <string name="生成">生成</string>
    <string name="二维码生成">二维码生成</string>
    <string name="确定">确定</string>
    <string name="颜色">颜色</string>
    <string name="保存">保存</string>
    <string name="保存成功">保存成功</string>
    <string name="已保存到">已保存到</string>
    <string name="请先选择图片">请先选择图片</string>
    <string name="请输入水印内容">请输入水印内容</string>
    <string name="小间距">小间距</string>
    <string name="中间距">中间距</string>
    <string name="大间距">大间距</string>
    <string name="水印颜色">水印颜色</string>
    <string name="水印大小">水印大小</string>
    <string name="水印角度">水印角度</string>
    <string name="透明度">透明度</string>
    <string name="保存图片">保存图片</string>
    <string name="重选图片">重选图片</string>
    <string name="选择图片">选择图片</string>
    <string name="导出图片">导出图片</string>
    <string name="效果预览">效果预览</string>
    <string name="下图是发送到朋友圈后的效果">下图是发送到朋友圈后的效果</string>
    <string name="刚刚">刚刚</string>
    <string name="删除">删除</string>
    <string name="九宫格步骤">九宫格步骤</string>
    <string name="切片已保存">切片已保存</string>
    <string name="请输入关键字">请输入关键字</string>
    <string name="搜索">搜索</string>
    <string name="打开软件">打开软件</string>
    <string name="卸载软件">卸载软件</string>
    <string name="复制包名">复制包名</string>
    <string name="提取APK">提取APK</string>
    <string name="软件详情">软件详情</string>
    <string name="分享软件">分享软件</string>
    <string name="提取成功">提取成功</string>
    <string name="设备信息">设备信息</string>
    <string name="请输入文本内容">请输入文本内容</string>
    <string name="解密">解密</string>
    <string name="加密">加密</string>
    <string name="转上标">转上标</string>
    <string name="转下标">转下标</string>
    <string name="请输入密钥">请输入密钥</string>
    <string name="Y轴">Y轴</string>
    <string name="X轴">X轴</string>
    <string name="Z轴">Z轴</string>
    <string name="磁感强度">磁感强度</string>
    <string name="未探测到金属">未探测到金属</string>
    <string name="探测到金属">探测到金属</string>
    <string name="设置参数">设置参数</string>
    <string name="请输入参数内容">请输入参数内容</string>
    <string name="设置参数内容">设置参数内容</string>
    <string name="请输入DPI值">请输入DPI值</string>
    <string name="请输入快递单号">请输入快递单号</string>
    <string name="开始识别">开始识别</string>
    <string name="add_collect">添加收藏</string>
    <string name="收藏管理">收藏管理</string>
    <string name="功能收藏">功能收藏</string>
    <string name="全部选择">全部选择</string>
    <string name="取消全选">取消全选</string>

</resources>