<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRCodeActivity"
    android:background="@color/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbarColor"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.Tools.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appbarColor"
            app:popupTheme="@style/Theme.Tools.PopupOverlay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/itemBackColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:srlEnablePureScrollMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:clipToPadding="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/请输入二维码内容"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:checkedButton="@id/b1"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/b1"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:minHeight="40dp"
                        android:padding="0dp"
                        android:text="@string/无LOGO" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/b2"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:minHeight="40dp"
                        android:padding="0dp"
                        android:text="@string/有LOGO" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/qj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/line"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/前景颜色"
                            android:textColor="@color/editTextColor"
                            android:textSize="16sp" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/qj1"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="#000000"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="0dp"
                            app:strokeColor="@color/hui"
                            app:strokeWidth="1dp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/bj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/line"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/背景颜色"
                            android:textColor="@color/editTextColor"
                            android:textSize="16sp" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/bj1"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="0dp"
                            app:strokeColor="@color/hui"
                            app:strokeWidth="1dp" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/line"
                    app:strokeWidth="1dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/二维码尺寸"
                            android:textColor="@color/editTextColor"
                            android:textSize="16sp" />

                        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                            android:id="@+id/seekbar1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            app:dsb_indicatorColor="@color/colorPrimary"
                            app:dsb_max="960"
                            app:dsb_min="96"
                            app:dsb_progressColor="@color/colorPrimary"
                            app:dsb_value="512" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/logo_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/backgroundColor"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/line"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="@string/LOGO图片"
                                android:textColor="@color/editTextColor"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tplj"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_weight="1"
                                android:text="@string/请选择二维码的LOGO图片"
                                android:textColor="@color/hui"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/xztp"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="16dp"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp"
                            android:text="@string/选择"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textColor="@color/editTextColor"
                            android:textSize="12sp"
                            app:backgroundTint="@color/itemBackColor"
                            app:rippleColor="@color/rippleColor" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:minWidth="0dp"
        android:text="@string/生成"
        app:icon="@drawable/ic_twotone_touch_app_24"
        app:rippleColor="@color/rippleColor" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>