<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConversionActivity"
    android:background="@color/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbarColor"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.Tools.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appbarColor"
            app:popupTheme="@style/Theme.Tools.PopupOverlay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/itemBackColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:srlEnablePureScrollMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:clipToPadding="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/十进制"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/二进制"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/八进制"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/十六进制"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>