<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbarColor"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.Tools.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appbarColor"
            app:popupTheme="@style/Theme.Tools.PopupOverlay" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/itemBackColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:srlEnablePureScrollMode="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_twotone_text_fields_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/请输入文本内容"
                        android:textColor="@color/editTextColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button1"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/解密"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/zts"
                        app:rippleColor="@color/rippleColor" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button2"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/加密"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/zts"
                        app:rippleColor="@color/rippleColor" />

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/itemBackColor"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/line"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <AutoCompleteTextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#00000000"
                            android:gravity="top"
                            android:inputType="none"
                            android:minLines="3"
                            android:paddingLeft="16dp"
                            android:paddingTop="12dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="12dp"
                            android:textSize="16sp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/copy"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                app:cardBackgroundColor="@color/itemBackColor"
                                app:cardCornerRadius="24dp"
                                app:cardElevation="0dp">

                                <ImageView
                                    android:id="@+id/imageView3"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:padding="12dp"
                                    android:scaleType="fitCenter"
                                    app:srcCompat="@drawable/ic_twotone_content_copy_24"
                                    app:tint="@color/zts" />
                            </com.google.android.material.card.MaterialCardView>

                        </RelativeLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>